--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
     // Logback classic
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    //JSON Extension
+    compile group: 'com.afollestad', name: 'ason', version: '1.4.16'
+    //Commons text, because UnicodeUnescaper
+    compile group: 'org.apache.commons', name: 'commons-text', version: '1.1'
 }
 
 compileJava.options.encoding = 'UTF-8'
