--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 mainClassName = 'me.duncte123.ghostBot.GhostBot'
 
-group 'me.duncte123'
+group 'me.duncte123.ghostbot'
 version "0.0.${getVersionBuild()}"
 
 sourceCompatibility = 1.8
