--- a/build.gradle
+++ b/build.gradle
@@ -19,14 +19,14 @@
 plugins {
     id 'java'
     id 'application'
+    id 'idea'
     id 'com.github.johnrengelman.shadow' version '2.0.2'
     id 'de.fuerstenau.buildconfig' version '1.1.8'
 }
 
 mainClassName = 'me.duncte123.ghostBot.GhostBot'
-
-group = 'me.duncte123.ghostbot'
-version = "0.1.0_${getGitHash()}"
+group 'me.duncte123.ghostBot'
+version "0.1.0_${getGitHash()}"
 
 sourceCompatibility = 1.8
 
@@ -70,4 +70,13 @@ def getGitHash() {
         standardOutput = stdout
     }
     return stdout.toString().trim()
+}
+
+buildConfig {
+    appName = project.name
+    version = project.version
+    packageName = project.group
+    charset = 'UTF-8'
+
+    clsName = 'BuildConfig'
 }
