--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ repositories {
 }
 
 dependencies {
+    //My little utils
+    compile 'com.github.duncte123:botCommons:42f3de4'
     //JDA
     compile group: 'net.dv8tion', name: 'JDA', version: '3.6.0_355'
     //LavaPlayer/Lavalink
@@ -47,16 +49,12 @@ dependencies {
         exclude group: 'com.github.Frederikam.Lavalink', module: 'Lavalink-Server'
         exclude group: 'net.dv8tion', module: 'JDA'
     }
-    //JSON Extension
-    compile group: 'com.afollestad', name: 'ason', version: '1.4.16'
     // Logback core
     compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
     // Logback classic
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     //JSON Extension
     compile group: 'com.afollestad', name: 'ason', version: '1.4.16'
-    //Commons text, because UnicodeUnescaper
-    compile group: 'org.apache.commons', name: 'commons-text', version: '1.1'
 }
 
 compileJava.options.encoding = 'UTF-8'
