--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ plugins {
 }
 
 group 'me.duncte123.ghostBot'
-version "1.11.0_${getGitHash()}"
-mainClassName = "${version}.GhostBot"
+version "1.11.1_${getGitHash()}"
+mainClassName = "${group}.GhostBot"
 
 sourceCompatibility = 1.8
 
