--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ group 'me.duncte123.ghostBot'
 version "1.12.0_${getGitHash()}"
 mainClassName = "${group}.GhostBot"
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_10
 
 repositories {
     jcenter()
@@ -43,9 +43,9 @@ dependencies {
     //My little utils
     compile 'com.github.duncte123:botCommons:bae72246fa'
     //JDA
-    compile group: 'net.dv8tion', name: 'JDA', version: '3.7.0_384'
+    compile group: 'net.dv8tion', name: 'JDA', version: '3.7.1_385'
     //LavaPlayer/Lavalink
-    compile(group: 'com.github.Frederikam', name: 'Lavalink', version: '6e911e45e7') {
+    compile(group: 'com.github.Frederikam', name: 'Lavalink', version: 'fbc24237c1') {
         exclude group: 'com.github.Frederikam.Lavalink', module: 'Lavalink-Server'
         exclude group: 'net.dv8tion', module: 'JDA'
     }
