--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     //My little utils
     compile 'com.github.duncte123:botCommons:bae72246fa'
     //JDA
-    compile group: 'net.dv8tion', name: 'JDA', version: '3.7.1_388'
+    compile (group: 'net.dv8tion', name: 'JDA', version: '3.7.1_390') {
+        exclude module: 'opus-java'
+    }
     //LavaPlayer/Lavalink
     compile group: 'com.github.FredBoat', name: 'Lavalink-Client', version: '3.0'
     // Logback core
@@ -79,7 +81,7 @@ shadowJar {
 }
 build {
     dependsOn clean
-    dependsOn jar
+    dependsOn shadowJar
 
-    jar.mustRunAfter clean
+    shadowJar.mustRunAfter clean
 }
