--- a/build.gradle
+++ b/build.gradle
@@ -43,13 +43,11 @@ dependencies {
     //My little utils
     compile 'com.github.duncte123:botCommons:4df5e29'
     //JDA
-    compile (group: 'net.dv8tion', name: 'JDA', version: '3.7.1_419') {
+    compile (group: 'net.dv8tion', name: 'JDA', version: '3.7.1_422') {
         exclude module: 'opus-java'
     }
     //LavaPlayer/Lavalink
     compile group: 'com.github.FredBoat', name: 'Lavalink-Client', version: '125b074'
-    // Logback core
-    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
     // Logback classic
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
@@ -81,7 +79,9 @@ shadowJar {
 }
 build {
     dependsOn clean
+    dependsOn jar
     dependsOn shadowJar
 
-    shadowJar.mustRunAfter clean
+    jar.mustRunAfter clean
+    shadowJar.mustRunAfter jar
 }
