--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ plugins {
     id 'java'
     id 'application'
     id 'idea'
+    id 'groovy'
     id 'com.github.johnrengelman.shadow' version '2.0.4'
 }
 
@@ -52,7 +53,7 @@ dependencies {
     // Logback classic
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-    runtime group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '3.0.0-alpha-3'
+    implementation 'com.github.apache.groovy:groovy-all:43d9f2178f'
 }
 
 task sourcesForRelease(type: Copy) {
