--- a/build.gradle
+++ b/build.gradle
@@ -42,13 +42,13 @@ repositories {
 
 dependencies {
     //My little utils
-    compile 'com.github.duncte123:botCommons:fbb8f98'
+    compile group: 'com.github.duncte123', name: 'botCommons', version: 'fbb8f98'
     //JDA
-    compile(group: 'net.dv8tion', name: 'JDA', version: '3.8.1_438') {
+    compile(group: 'net.dv8tion', name: 'JDA', version: '3.8.1_439') {
         exclude module: 'opus-java'
     }
     //LavaPlayer/Lavalink
-    compile group: 'com.github.FredBoat', name: 'Lavalink-Client', version: 'edd76a0ae8'
+    compile group: 'com.github.FredBoat', name: 'Lavalink-Client', version: 'fbd2975'
     // Logback classic
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
