--- a/build.gradle
+++ b/build.gradle
@@ -41,19 +41,19 @@ repositories {
 }
 
 dependencies {
-//    compile 'com.github.apache.groovy:groovy-all:d87966b'
-    compile 'org.codehaus.groovy:groovy:2.5.3'
+//    implementation 'com.github.apache.groovy:groovy-all:d87966b'
+    implementation group: 'org.codehaus.groovy', name: 'groovy', version: '2.5.4'
     
     //My little utils
-    compile group: 'com.github.duncte123', name: 'botCommons', version: '8c9ad29'
+    implementation group: 'com.github.duncte123', name: 'botCommons', version: '8c9ad29'
     //JDA
-    compile(group: 'net.dv8tion', name: 'JDA', version: '3.8.1_441') {
+    implementation(group: 'net.dv8tion', name: 'JDA', version: '3.8.1_441') {
         exclude module: 'opus-java'
     }
     //LavaPlayer/Lavalink
-    compile group: 'com.github.FredBoat', name: 'Lavalink-Client', version: 'fbd2975'
+    implementation group: 'com.github.FredBoat', name: 'Lavalink-Client', version: 'fbd2975'
     // Logback classic
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
 
 task sourcesForRelease(type: Copy) {
