--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     implementation group: 'com.github.FredBoat', name: 'Lavalink-Client', version: 'fbd2975'
     // Logback classic
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    
+    // Slack support
+    implementation group: 'com.github.Ullink', name: 'simple-slack-api', version: '1.2.0'
 }
 
 task sourcesForRelease(type: Copy) {
