--- a/build.gradle
+++ b/build.gradle
@@ -41,13 +41,12 @@ repositories {
 }
 
 dependencies {
-//    implementation 'com.github.apache.groovy:groovy-all:d87966b'
-    implementation group: 'org.codehaus.groovy', name: 'groovy', version: '2.5.4'
+    implementation group: 'org.codehaus.groovy', name: 'groovy', version: '2.5.5'
     
     //My little utils
     implementation group: 'com.github.duncte123', name: 'botCommons', version: '8c9ad29'
     //JDA
-    implementation(group: 'net.dv8tion', name: 'JDA', version: '3.8.1_448') {
+    implementation(group: 'net.dv8tion', name: 'JDA', version: '3.8.1_454') {
         exclude module: 'opus-java'
     }
     //LavaPlayer/Lavalink
@@ -56,7 +55,7 @@ dependencies {
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     
     // Slack support
-    implementation group: 'com.github.Ullink', name: 'simple-slack-api', version: '1.2.0'
+    implementation group: 'com.github.Ullink', name: 'simple-slack-api', version: 'd268801909'
 }
 
 task sourcesForRelease(type: Copy) {
