--- a/build.gradle
+++ b/build.gradle
@@ -45,15 +45,19 @@ dependencies {
     implementation group: 'org.codehaus.groovy', name: 'groovy', version: '2.5.6'
     
     //My little utils
-    implementation group: 'com.github.duncte123', name: 'botCommons', version: '8c9ad29'
+    implementation group: 'com.github.duncte123', name: 'botCommons', version: '2644ca6067'
+
     //JDA
     implementation(group: 'net.dv8tion', name: 'JDA', version: '3.8.3_460') {
         exclude module: 'opus-java'
     }
     //LavaPlayer/Lavalink
     implementation group: 'com.github.FredBoat', name: 'Lavalink-Client', version: '1a4b0f5'
+
     // Logback classic
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+
+    implementation group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
 }
 
 task sourcesForRelease(type: Copy) {
