--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation(group: 'net.dv8tion', name: 'JDA', version: '3.8.3_460') {
         exclude module: 'opus-java'
     }
+    
+    implementation group: 'com.jagrosh', name: 'jda-utilities', version: '2.5.1'
+    
     //LavaPlayer/Lavalink
     implementation group: "com.sedmelluq", name: "lavaplayer", version: "1.3.11"
     implementation group: 'com.github.FredBoat', name: 'Lavalink-Client', version: '1a4b0f5'
