--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
         exclude module: 'opus-java'
     }
     
-    implementation group: 'com.jagrosh', name: 'jda-utilities', version: '2.5.1'
+    implementation group: 'com.jagrosh', name: 'jda-utilities-commons', version: '2.1.5'
     
     //LavaPlayer/Lavalink
     implementation group: "com.sedmelluq", name: "lavaplayer", version: "1.3.11"
