--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,30 +18,33 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew build
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          tag_name: a${{ github.run_number }}
-          release_name: Action-${{ github.run_number }}
-          body: |
-            Automated release
-          draft: false
-          prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FILE_NAME: GhostBot.jar
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
+            registry: docker.pkg.github.com
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./build/libs/${{ env.FILE_NAME }}
-          asset_name: ${{ env.FILE_NAME }}
-          asset_content_type: application/java-archive
+            context: .
+            file: ./Dockerfile
+            pull: true
+            push: true
+            cache-from: type=registry,ref=duncte123/ghostbot:latest
+            cache-to: type=inline
+            tags: duncte123/ghostbot/ghostbot:latest
+
+#        - name: Trigger dev webhook
+#          uses: zzzze/webhook-trigger@v1.0.0
+#          with:
+#              webhook_url: ${{ secrets.DEV_WEBHOOK_URL }}
