--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,35 +14,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Push to GitHub Packages
+        uses: docker/build-push-action@v1
         with:
             username: ${{ github.actor }}
             password: ${{ secrets.GITHUB_TOKEN }}
             registry: docker.pkg.github.com
-
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-            context: .
-            file: ./Dockerfile
-            pull: true
-            push: true
-            cache-from: type=registry,ref=duncte123/GhostBot/ghostbot:latest
-            cache-to: type=inline
-            tags: duncte123/ghostbot/ghostbot:latest
+            repository: duncte123/ghostbot/ghostbot
+            tags: latest
 
 #        - name: Trigger dev webhook
 #          uses: zzzze/webhook-trigger@v1.0.0
