--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
             repository: duncte123/ghostbot/ghostbot
             tags: latest
 
-#        - name: Trigger dev webhook
-#          uses: zzzze/webhook-trigger@v1.0.0
-#          with:
-#              webhook_url: ${{ secrets.DEV_WEBHOOK_URL }}
+        - name: Trigger dev webhook
+          uses: zzzze/webhook-trigger@v1.0.0
+          with:
+              webhook_url: ${{ secrets.WEBHOOK_URL }}
