--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,30 +1,51 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
 name: Build and release
 
 on:
-  push:
-    branches: [ master ]
+    push:
+        branches: [ master ]
 
 jobs:
-  build:
+    build:
 
-    runs-on: ubuntu-18.04
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
+        steps:
+            -   uses: actions/checkout@v2
 
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
-        with:
-            username: ${{ github.actor }}
-            password: ${{ secrets.GITHUB_TOKEN }}
-            registry: docker.pkg.github.com
-            repository: duncte123/ghostbot/ghostbot
-            tags: latest
+            -   name: Set up QEMU
+                uses: docker/setup-qemu-action@v1
 
-      - name: Trigger dev webhook
-        uses: zzzze/webhook-trigger@v1.0.0
-        with:
-            webhook_url: ${{ secrets.WEBHOOK_URL }}
+            -   name: Set up Docker Buildx
+                uses: docker/setup-buildx-action@v1
+
+            -   name: Login to Github packages
+                uses: docker/login-action@v1
+                with:
+                    username: duncte123
+                    password: ${{ secrets.DOCKER_TOKEN }}
+
+            -   name: Build and push
+                id: docker_build
+                uses: docker/build-push-action@v2
+                with:
+                    context: .
+                    push: true
+                    tags: duncte123/ghostbot:latest
+                    cache-from: type=local,src=/tmp/.buildx-cache
+                    cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+            # Temp fix
+            # https://github.com/docker/build-push-action/issues/252
+            # https://github.com/moby/buildkit/issues/1896
+            -   name: Move cache
+                run: |
+                    rm -rf /tmp/.buildx-cache
+                    mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+            -   name: Image digest
+                run: echo ${{ steps.docker_build.outputs.digest }}
+
+            -   name: Trigger dev webhook
+                uses: zzzze/webhook-trigger@v1.0.0
+                with:
+                    webhook_url: ${{ secrets.WEBHOOK_URL }}
